<resources>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCUc_5xg2zCErjNEVpW6KKdVXKY2hS1JME</string>

    <!--Ads-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5875569058891842/3714951369</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-5875569058891842~4993192255</string>

    <string name="app_name">Weather Compare</string>
    <string name="package_name" translatable="false">tech.khash.weathercompare</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_compare">Compare</string>
    <string name="title_activity_open_weather_forecast">Accu Weather Forecast</string>
    <string name="title_activity_add_location">Add Location</string>
    <string name="title_dark_sky_forecast">Dark Sky Forecast</string>
    <string name="title_open_weather_forecast">Open Weather Forecast</string>
    <string name="title_weather_bit_forecast">Weather Bit Forecast</string>
    <string name="title_weather_unlocked_forecast">Weather Unlocked Forecast</string>
    <string name="title_activity_forecast">Forecast</string>
    <string name="title_activity_today">Today</string>
    <string name="units">Units</string>

    <!--UI/Names-->
    <string name="open_weather">OpenWeather</string>
    <string name="dark_sky">DarkSky</string>
    <string name="accu_weather">AccuWeather</string>
    <string name="summary">Summary</string>
    <string name="temp">Temp</string>
    <string name="dew_point">Dew Point</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="wind_gust">Wind Gust</string>
    <string name="cloud_cover">Cloud Cover</string>
    <string name="visibility">Visibility</string>
    <string name="today">Today</string>
    <string name="forecast">Forecast</string>
    <string name="provider">Provider</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="feels_min">Feels Min</string>
    <string name="feels_max">Feels Max</string>
    <string name="pop">POP</string>
    <string name="pop_type">P. Type</string>
    <string name="pop_total">P. Total</string>
    <string name="cloud">Cloud</string>
    <string name="gust">Gust</string>
    <string name="total_rain">T. Rain</string>
    <string name="total_snow">T. Snow</string>

    <!--Menu Main and Navigation Drawer-->
    <string name="search">Search</string>
    <string name="my_location">My Location</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="rate_app">Rate Us</string>
    <string name="contact">Contact</string>
    <string name="communication">Communication</string>
    <string name="settings">Settings</string>
    <string name="contact_email">WeatherCompare@khash.tech</string>
    <string name="share_intent_title">Share Weather Compare</string>
    <string name="share_dialog_title">Check this app out!</string>
    <string name="google_play_address" translatable="false">https://play.google.com/store/apps/details?id=tech.khash.weathercompare</string>
    <string name="add_location">Add Location</string>
    <string name="delete_all">Delete all</string>
    <string name="refresh">Refresh</string>
    <string name="sort_by_name_des">Sort (Descending)</string>
    <string name="sort_by_name_asc">Sort (Ascending)</string>
    <string name="today_s_weather">Today\'s Weather</string>
    <string name="_3_day_forecast">3-day Forecast</string>

    <!--Permission-->
    <string name="permission_required_text_dialog">This feature requires user\'s location to work properly. This app does not store user\'s location.\nWould you like to turn it on now?</string>
    <string name="permission_required_title_dialog">Permission required</string>
    <string name="permission_required_yes_dialog">Give permission</string>
    <string name="toast_no_location_permission">Location permission denied</string>
    <string name="name_required_toast">Name required</string>
    <string name="error_getting_location_toast">Error getting location</string>
    <string name="location_added_successfully_toast">added successfully</string>

    <!--Add new location activity-->
    <string name="save">Save</string>
    <string name="name_colon">Name:</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="enter_address_hint">Enter address/city/zip</string>
    <string name="geocoder_not_available_toast">Geocoder not available</string>
    <string name="no_results_found_toast">No results found</string>
    <string name="map_not_ready">Map not ready</string>

    <!--Dialogs - Toasts-->
    <string name="no_saved_location">No Saved Locations</string>
    <string name="add_location_empty_view_text">Add locations using the button or from menu.\nOr use
        device location from app bar</string>
    <string name="no_geofence_show_toast">No saved locations</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all saved locations?</string>
    <string name="cancel">Cancel</string>
    <string name="location_permission_denied">Location permission denied</string>

    <string name="no_results">No results</string>
    <string name="multiple_results">Multiple results</string>
    <string name="error">Error</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="unable_to_locate_device">Unable to locate device. Would you like to add location manually?</string>
    <string name="unable_finish_search">Unable to finish search. Would you like to add location manually?</string>
    <string name="multiple_search_results">Multiple results were found. Would you like to add location manually?</string>
    <string name="no_searhc_results">No results found. Would you like to add location manually?</string>
    <string name="warning">Warning</string>
    <string name="delete_confirmation">Are you sure you want to delete \"</string>
    <string name="delete">Delete</string>
    <string name="rate_us">Rate us!</string>
    <string name="rate_us_body">Do you enjoy using Weather Compare? Rate us on Google Play</string>
    <string name="not_now">Not now</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_location_permission">Location permission required.\nPlease give permission and try again.</string>
    <string name="no_location_has_been_chosen">No Location has been chosen.\nPlease use device location,\nor choose a location using search from app bar.</string>

    <!--preferences-->
    <string name="pref_key_metric">pref_key_metric</string>
    <string name="rated_app_pref_key">rated-app-pref-key</string>
    <string name="app_open_count_pref_key">app-open-count-pref-key</string>

    <!--Settings-->
    <string name="metric_caps">METRIC</string>
    <string name="celcius">Celsius</string>
    <string name="millimeter">Millimeter</string>
    <string name="centimeter_snow">Centimeter (snow)</string>
    <string name="km">Km</string>
    <string name="kmh">kmh</string>
    <string name="imperial_caps">IMPERIAL</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="inch">Inch</string>
    <string name="inch_snow">Inch (snow)</string>
    <string name="mile">Mile</string>
    <string name="mph">mph</string>

    <!--About-->
    <string name="about_text">
        This app features side-by-side weather forecast from up to 4 different providers to easily
        compare weather data across multiple providers.
        \n\nIt has the feature to show user\’s location (requires location permission).
        \nAdditionally, users can easily search address, or use the map to pinpoint a specific
        location on a map.
        \nUser can save unlimited number of saved locations for ease of use.
        \n\nUnits can be set from the settings and it supports Metric (Celsius, km, mm, and kmh)
        and Imperial (Fahrenheit, mile, inch, and mph).
        \n\nWeather providers are: AccuWeather, DarkSky, WeatherBit, and WeatherUnlocked.

    </string>

    <!--Privacy Policy-->
    <string name="privacy_policy_text">WeatherCompare is a free Android app (it may show small
        banner ads).
        \n\nThis SERVICE is provided by WeatherCompare, and is intended for use as is.
        \n\nThis page is used to inform app users regarding our policies with the collection, use, and
        disclosure of Personal Information if anyone decided to use our Service.
        \n\nIf you choose to use our Service, and if you give permission to WeatherCompare to use your
        location, then you agree to the collection and use of information in relation with this
        policy.
        \n\nThe Personal location Information that we collect are used for providing and
        improving the Service. We do not save any user information off the mobile device, and we
        will not use or share your information with anyone except as described in this Privacy Policy.
        \n\nInformation Collection and Use
        \n\nFor a better experience while using our Service, we may require you to provide us with
        certain personally identifiable information, including but not limited to user’s location.
        \nThe information that we request is retained on your device and is not collected by us in any way.
        \n\n\nContact Us
        \nIf you have any questions or suggestions about our Privacy Policy, do not hesitate to
        contact us at \nWeatherCompare@khash.tech
    </string>



</resources>
