<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_find_me"
        android:icon="@drawable/ic_my_location_white"
        android:orderInCategory="1"
        android:title="@string/my_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_log_db"
        android:icon="@drawable/ic_log_white"
        android:orderInCategory="5"
        android:title="Log DB"
        app:showAsAction="ifRoom" />



    <item
        android:id="@+id/action_sort_name_ascending"
        android:title="@string/sort_by_name_asc"
        app:showAsAction="never"
        android:orderInCategory="60"/>

    <item
        android:id="@+id/action_sort_name_descending"
        android:title="@string/sort_by_name_des"
        app:showAsAction="never"
        android:orderInCategory="70"/>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="never"
        android:orderInCategory="80"/>

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"
        android:orderInCategory="100"/>

</menu>